manifests/service-2.yml
apiVersion: v1
kind: Service
metadata:
    name: "k8sdemo-0d09"
    labels:
        app: "k8sdemo-0d09"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "k8sdemo-0d09"
