manifests/ingress-1.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "k8sdemo-fff8"
    labels:
        app: "k8sdemo-fff8"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: k8s-demo952f-k8sdemo-fff8.c0eab95626654f62be00.westeurope.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "k8sdemo-fff8"
                servicePort: 80
