manifests/ingress-2.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "k8sdemo-0d09"
    labels:
        app: "k8sdemo-0d09"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: k8s-demotest1-k8sdemo-0d09.c0eab95626654f62be00.westeurope.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "k8sdemo-0d09"
                servicePort: 80
