manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "k8sdemo-104a"
    labels:
        app: "k8sdemo-104a"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: k8s-demoa8a0-k8sdemo-104a.c0eab95626654f62be00.westeurope.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "k8sdemo-104a"
                servicePort: 80
